--- a/src/Pages/Authorization/login.css
+++ b/src/Pages/Authorization/login.css
@@ -83,6 +83,28 @@
   margin-top: 20px;
 }
 
+.password-input-container {
+  position: relative;
+}
+
+.password-toggle-button {
+  position: absolute;
+  right: 10px;
+  top: 50%;
+  transform: translateY(-50%);
+  background: none;
+  border: none;
+  cursor: pointer;
+  color: #666;
+}
+
+.password-toggle-button:hover {
+  color: #333;
+}
+
+
+
+
 @media screen and (min-width: 768px) and (max-width: 1390px) {
   .auth-main-container {
     flex-direction: column;
