--- a/src/Pages/Calendar/calendar.css
+++ b/src/Pages/Calendar/calendar.css
@@ -11,6 +11,22 @@
   gap: 20px;
 }
 
+.calendar-select-sort {
+  padding: 15px;
+  border: none;
+  border-radius: 10px;
+  background-color: #f5f5f7;
+  color: #333;
+  font-size: 16px;
+  font-weight: 400;
+  cursor: pointer;
+  outline: none;
+  transition: all 0.3s ease;
+  background-position: right 10px center;
+  background-size: 16px;
+}
+
+
 .calendar-page-content {
   display: flex;
   flex-direction: column;
@@ -24,9 +40,8 @@
 
 .calendar-page-content-header {
   display: flex;
-  align-items: flex-end;
   gap: 10px;
-  align-self: flex-end;
+  justify-content: space-between;
 }
 
 .calendar-search-container {
